Refactor: Updated sonar lint & fixed ajax logic for book rent