@@ -10,7 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,10 +28,10 @@ public class CategoryServiceImpl implements CategoryService {
     public List<CategoryResponse> getAllCategories() {
 
         List<Category> categories = categoryRepo.findAll();
-        List<CategoryResponse> categoryResponseList = categories.stream()
+
+        return categories.stream()
                 .map(this::toCategoryResponse)
-                .collect(Collectors.toList());
-        return categoryResponseList;
+                .toList();
     }
 
     @Override
@@ -58,7 +57,7 @@ public class CategoryServiceImpl implements CategoryService {
         return new Message("DELETED", "Category deleted successfully");
     }
 
-    private CategoryResponse toCategoryResponse(Category category){
+    private CategoryResponse toCategoryResponse(Category category) {
         return CategoryResponse.builder()
                 .id(category.getId())
                 .name(category.getName())
@@ -66,8 +65,8 @@ public class CategoryServiceImpl implements CategoryService {
                 .build();
     }
 
-    private Category toCategory(CategoryRequest categoryRequest){
-        Category  category = new Category();
+    private Category toCategory(CategoryRequest categoryRequest) {
+        Category category = new Category();
 
         category.setId(categoryRequest.getId());
         category.setName(categoryRequest.getName());
